2017-07-30  Eric Herman <eric@freesa.org>

	Prepair for fprintf, make print context more sophisticated.
	define struct eh_printf_context_s

	* src/eh-printf.h: comments
	* src/eh-sys-context-arduino.cpp: eh_printf_context_s
	* src/eh-sys-context-linux.c: eh_printf_context_s
	* src/eh-sys-context.h: eh_printf_context_s
	* tests/test-linux-write.c: eh_printf_context_s
	* tests/test-misc.c: float modifiers seem to be ignored
	* Makefile.am: eh_printf_context_s
	* misc/pre-tidy.patch: respin

2017-07-19  Eric Herman <eric@freesa.org>

	Foundation for supporting 8bit CPUs: 32bit doubles

	* src/eh-parse-float.h: make header for platform float stuff
	* src/eh-parse-float.c: impl float64_to_fields, float32_to_fields
	* src/eh-printf-private.h: include eh-parse-float.h
	* src/eh-printf.c: remove float64_to_fields
	* tests/test-parse-float.c: very basic tests
	* Makefile.am: add new files
	* configure.ac: float.h
	* misc/pre-tidy.patch: new header

2017-07-16  Eric Herman <eric@freesa.org>

	Add reasonable support for %f
	As spedified in "man 3 snprintf" truncation should result in
	"size" characters being written.

	* src/eh-printf.h: Document behavior specified in man 3 snprintf
	* src/eh-printf.c: sketch-in "%f" support, snprintf return val
	* src/eh-printf-private.h: eh_double_to_ascii
	* tests/test-floats.c: test %f for a positive and negative
	* configure.ac: stdint.h, uint*_t, sqrt
	* Makefile.am: add tests, add -lm for sqrt(-1.0) in test-floats
	* misc/pre-tidy.patch: respin for comments
	* TODO: mention ceil and log10

2016-10-31  Eric Herman <eric@freesa.org>

	reorganize the source a bit
	TODO: fight with autotools to avoid installing private header

	* src/eh-printf-private.h: extract prototypes into this file
	* src/eh-printf.c: group the functions a little more nicely
	* Makefile.am: include the new .h
	* TODO: autotools questions, and mention lack of supporting %f

2016-10-30  Eric Herman <eric@freesa.org>

	implement printf on arduino
